--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html class="scroll-smooth scroll-p-[83px]" lang="en">
+<html class="scroll-smooth scroll-p-[100px]" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UnityIndo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="script.js"></script>
     <link rel="icon" href="./img/icon-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,58 +17,107 @@
   </head>
   <body class="eb-garamond">
     <nav class="border-b-2 sticky top-0 z-20 bg-white drop-shadow-md">
-      <div class="flex items-center justify-between mx-28 py-6">
-        <div class="flex gap-2 items-center">
-          <img class="w-[45px]" src="./img/icon-logo.png" alt="">
-          <h2 class="font-bold text-2xl text-yellow-400">UnityIndo</h2>
-        </div>
-
-        <div>
-          <ul class="flex gap-5 text-[16px]">
-            <li><a class="hover:text-yellow-400" href="#home">Home</a></li>
-            <li><a class="hover:text-yellow-400" href="#about">About</a></li>
-            <li><a class="hover:text-yellow-400" href="#gallery">Gallery</a></li>
-            <li><a class="hover:text-yellow-400" href="#contact">Contact</a></li>
-          </ul>
-        </div>
+     <div class="flex items-center justify-between mx-5 md:mx-20 lg:mx-28 py-[15px] md:py-6 lg:py-6">
+      <div class="flex gap-2 items-center">
+        <img class="w-[45px]" src="./img/icon-logo.png" alt="Logo">
+        <h2 class="font-bold text-2xl text-yellow-400">UnityIndo</h2>
       </div>
-    </nav>
+      <svg id="toggleMenu"
+        class="w-[30px] md:hidden lg:hidden"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+      >
+        <path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path>
+      </svg>
+
+    <div class="hidden md:block lg:block">
+      <ul class="flex gap-5 text-[16px]">
+        <li><a class="hover:text-yellow-400" href="#home">Home</a></li>
+        <li><a class="hover:text-yellow-400" href="#about">About</a></li>
+        <li><a class="hover:text-yellow-400" href="#gallery">Gallery</a></li>
+        <li><a class="hover:text-yellow-400" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div
+  id="containerMenu"
+  class="bg-menu inset-0 fixed z-30 transition-all duration-500 transform -translate-x-full"
+>
+  <div class="w-1/2 bg-white h-full">
+    <div
+      class="flex items-center py-[22px] px-[6px] justify-between border-b-2"
+    >
+      <div class="flex gap-2">
+        <img class="w-[25px]" src="./img/icon-logo.png" alt="Logo">
+        <h2 class="font-bold text-[18px] text-yellow-400">UnityIndo</h2>
+      </div>
+      <svg
+        id="toggleClose"
+        class="w-[30px]"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+      >
+        <path
+          d="M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z"
+        ></path>
+      </svg>
+    </div>
+    <div class="flex flex-col">
+      <a class="bg-text w-full px-[5px] py-[8px]" href="#home">Home</a>
+      <a class="bg-text w-full px-[5px] py-[8px]" href="#about">About</a>
+      <a class="bg-text w-full px-[5px] py-[8px]" href="#gallery">Gallery</a>
+      <a class="bg-text w-full px-[5px] py-[8px]" href="#contact">Contact</a>
+    </div>
+  </div>
+</div>
+
+    
+    
     <main>
       <section id="home">
-        <div class="py-3">
-          <div class="flex mx-28 mt-[150px] justify-between">
-            <div class="w-[28rem]">
+        <div class="py-3 mt-[100px] md:mt-0 md:mx-20 lg-mt-0 lg:mx-28 ">
+          <div class="lg:flex mx-0 lg:mx-0 md:mt-[150px] lg:mt-[150px] justify-between">
+            <div>
+              <img class="w-[800px] md:w-[700px]  md:block lg:hidden" src="./img/img-budaya.png" alt="img persatuan indonesia" />
+            </div>  
+            <div class="lg:w-[28rem] m-auto md:mx-[113px] lg:m-0 lg:mr-[128px]">
               <h2
-                class="font-bold text-[30px] mb-5 bg-gradient-to-t from-yellow-400 to-orange-400 text-transparent bg-clip-text"
+                class="font-bold text-[18px] m-auto w-4/5 text-center mt-[20px] md:text-[30px] md:text-start md:w-[450px] lg:m-0 lg:text-[30px] lg:w-[500px] lg:text-start mb-5 bg-gradient-to-t from-yellow-400 to-orange-400 text-transparent bg-clip-text md:mt-[30px] lg:mt-0"
               >
                 RASAKAN KEBERAKAGAMAN SUKU BANGSA INDONESIA
               </h2>
-              <p class="font-normal text-[1rem] mb-20">
+              <p class="font-normal text-center mx-20 md:mx-0 lg:mt-[10px] lg:mx-0 text-[12px] md:text-[18px] md:text-start lg:text-[18px] lg:text-start mb-10 md:mb-20 lg:mb-20">
                 Mulailah petualangan Unityindo Anda tanpa repot. Cukup telusuri
                 situs web kami untuk menyelami kekayaan tradisi dan adat
                 istiadat indonesia
               </p>
-              <a href="./page/provinsi-aceh.html"
-                class="bg-yellow-300 p-4 rounded-md font-semibold hover:bg-yellow-600"
-              >
-                Jelajahi lebih lanjut
-              </a>
+              <div class="flex justify-center mx-10 md:mx-0 lg:mx-0 md:justify-start lg:justify-start">
+                <a href="./page/provinsi-aceh.html"
+                  class="bg-yellow-300 p-4 rounded-md font-semibold text-[12px] md:text-[15px] lg:text-[15px] hover:bg-yellow-600 md:ml-0 lg:ml-0"
+                >
+                  Jelajahi lebih lanjut
+                </a>
+              </div>
             </div>
             <div>
-              <img class="w-[550px]" src="./img/img-budaya.png" alt="" />
+              <img class="w-[550px] hidden md:hidden lg:block" src="./img/img-budaya.png" alt="img persatuan indonesia" />
             </div>
           </div>
-        </div>
+        </div>  
       </section>
 
       <!-- about -->
       <section id="about">
         <div class="mt-40 bg-sidebar py-[50px]">
           <div class="text-center">
-            <h2 class="font-bold text-[30px] mb-5 text-yellow-400">
+            <h2 class="font-bold text-[25px] md:text-[30px] lg:text-[30px] mb-5 text-yellow-400">
               Tentang UnityIndo
             </h2>
-            <p class="w-[43.7rem] text-center mx-auto">
+            <p class="md:w-[43.7rem] lg:w-[43.7rem] text-justify md:text-center lg:text-center mx-[35px] md:mx-auto lg:mx-auto text-[12px] md:text-[18px] lg:text-[18px]">
               UnityIndo berdedikasi untuk merayakan dan melestarikan kekayaan
               budaya Indonesia. Misi kami adalah untuk menumbuhkan pemahaman dan
               apresiasi yang lebih dalam terhadap beragam budaya yang membentuk
@@ -75,25 +125,25 @@
               bersama.
             </p>
           </div>
-          <div class="mt-10 flex gap-[40px] justify-center">
-            <div class="w-[400px]">
-              <img class="w-[350px]" src="./img/img-tarianbudaya.png" alt="" />
-              <h2 class="text-yellow-400 font-bold text-[20px] mb-[8px]">
+          <div class="mt-10 md:flex lg:flex gap-[40px] justify-center md:mx-20 lg:mx-0">
+            <div class="w-[320px] md:w-[400px] lg:[400px] mx-auto md:mx-0 lg:mx-0">
+              <img class="w-[250px] mx-auto md:w-[250px] md:mx-0 lg:mx-0 lg:w-[350px]" src="./img/img-tarianbudaya.png" alt="" />
+              <h2 class="text-yellow-400 font-bold text-[18px] md:text-[20px] lg:text-[20px] mb-[8px] text-center md:text-start lg:text-start">
                 Melestarikan Warisan Budaya
               </h2>
-              <p class="text-[15px] text-justify">
+              <p class="text-[12px] md:text-[18px] lg:text-[18px] text-justify">
                 Keanekaragaman budaya Indonesia merupakan sebuah kekayaan yang
                 harus kita lestarikan. Dari tarian tradisional, musik, dan
                 kerajinan tangan hingga ritual dan bahasa kuno, UnityIndo
                 menyoroti praktik budaya yang mendefinisikan identitas kami.
               </p>
             </div>
-            <div class="w-[400px] text-justify">
-              <img class="w-[350px]" src="./img/img-bhineka.png" alt="" />
-              <h2 class="text-yellow-400 font-bold text-[20px] mb-[8px]">
+            <div class="w-[320px] md:w-[400px] lg:[400px] mx-auto md:mx-0 lg:mx-0 text-justify mt-[50px] md:mt-0 lg:mt-0">
+              <img class="w-[250px] mx-auto md:w-[250px] md:mx-0 lg:mx-0 lg:w-[350px]" src="./img/img-bhineka.png" alt="" />
+              <h2 class="text-yellow-400 font-bold text-[18px] md:text-[20px] lg:text-[20px] mb-[8px] text-center md:text-start lg:text-start">
                 Bhinneka Tunggal Ika
               </h2>
-              <p class="text-[15px]">
+              <p class="text-[12px] md:text-[18px] lg:text-[18px]">
                 Kekuatan kami terletak pada keberagaman kami. UnityIndo
                 menekankan pentingnya merangkul perbedaan dan bersatu untuk
                 menciptakan masyarakat yang harmonis. Persatuan melalui
@@ -106,25 +156,25 @@
 
       <!-- galery -->
       <section id="gallery">
-        <div class="bg-sidebar pb-[170px]">
-          <div class="mx-28 mt-[100px]">
+        <div class="bg-sidebar pb-[70px]">
+          <div class="md:mx-20 lg:mx-28 mt-[100px]">
             <div class="flex gap-[30px]">
               <!-- stkiy -->
-              <aside class="h-screen sticky top-20">
-                <h2 class="font-bold text-[30px] mb-5 text-yellow-400 mt-[50px]">
+              <aside class="h-full sticky top-[100px]">
+                <h2 class="font-bold text-[25px] md:text-[30px] lg:text-[30px] mb-[16px] text-yellow-400 mt-[50px]">
                   Galeri Budaya
                 </h2>
                 <div
-                  class="w-[410px] bg-white rounded-md drop-shadow-lg h-screen py-[30px] px-[30px]">
-                  <p class="text-justify text-[18px] leading-8">
+                  class="md:w-[310px] lg:w-[410px] bg-white rounded-md drop-shadow-lg h-screen py-[15px] md:py-[30px] lg:py-[30px] px-[30px]">
+                  <p class="text-justify text-[12px] md:text-[18px] lg:text-[18px] leading-8">
                     Selamat datang di Galeri Budaya, tempat di mana keindahan dan keunikan warisan leluhur tersaji dalam setiap karya penuh makna. Dari tarian tradisional hingga kerajinan tangan, setiap elemen mencerminkan kekayaan budaya Indonesia yang diwariskan turun-temurun.
-                  </p><br>
-                  <p class="text-justify text-[18px] leading-8">Jelajahi setiap sudut galeri yang menghadirkan kisah tentang identitas bangsa melalui warna, gerakan, dan ekspresi khas berbagai daerah. Dengan memahami dan menghargai warisan ini, kita dapat terus melestarikan tradisi dan memperkuat rasa cinta terhadap budaya Indonesia.</p>
+                  </p>
+                  <p class="text-justify text-[12px] md:text-[18px] lg:text-[18px] leading-8 mt-[15px]">Jelajahi setiap sudut galeri yang menghadirkan kisah tentang identitas bangsa melalui warna, gerakan, dan ekspresi khas berbagai daerah. Dengan memahami dan menghargai warisan ini, kita dapat melestarikan tradisi dan memperkuat rasa cinta terhadap budaya Indonesia.</p>
                 </div>
               </aside>
   
               <!-- card -->
-              <div class="grid grid-cols-3 gap-4 w-[62.5rem] mt-[115px]">
+              <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4 w-[62.5rem] mt-[115px]">
                 <a href="./page/provinsi-aceh.html"
                   class="bg-white drop-shadow-md w-fit p-[20px] rounded-md hover:scale-105 hover:drop-shadow-lg cursor-pointer transition-all delay-100"
                 >
@@ -519,11 +569,11 @@
 
     <!-- footer -->
     <div class="bg-sidebar">
-      <div class="mt-[100px] flex h-[250px] mx-28 justify-between pt-[50px]">
-        <div class="flex gap-[70px]">
+      <div class="mt-[100px] flex h-[250px] mx-10 md:mx-20 lg:mx-28 justify-between pt-[50px]">
+        <div class="flex gap-[30px] md:gap-[70px] lg:gap-[70px]">
           <div>
-            <h1 class="text-[20px] mb-[15px]">About</h1>
-            <ul>
+            <h1 class="text-[15px] md:text-[20px] lg:text-[20px] mb-[15px]">About</h1>
+            <ul class="text-[10px] md:text-[15px] lg:text-[15px]">
               <li><a href="">Home</a></li>
               <li><a href="">About Us</a></li>
               <li><a href="">Gallery</a></li>
@@ -532,10 +582,10 @@
           </div>
 
           <div>
-            <h1 class="text-[20px] mb-[15px]">Connect with us</h1>
+            <h1 class="text-[15px] md:text-[20px] lg:text-[20px] mb-[15px]">Connect with us</h1>
             <div class="flex gap-1">
               <svg
-                class="w-8"
+                class="w-6 md:w-8 lg:w-8"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 fill="currentColor"
@@ -546,7 +596,7 @@
               </svg>
 
               <svg
-                class="w-8"
+                class="w-6 md:w-8 lg:w-8"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 fill="currentColor"
@@ -557,7 +607,7 @@
               </svg>
 
               <svg
-                class="w-8"
+                class="w-6 md:w-8 lg:w-8"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 fill="currentColor"
@@ -571,16 +621,16 @@
 
         </div>
         <div>
-          <h1 class="text-[20px] mb-[15px]">Subscribe to our updates</h1>
+          <h1 class="text-[15px] md:text-[20px] lg:text-[20px] mb-[15px]">Subscribe to our updates</h1>
           <input
-            class="rounded-full p-[5px] w-[280px]"
+            class="rounded-full p-[3px] md:p-[5px] lg:p-[5px] w-[150px] md:w-[280px] lg:w-[280px]"
             type="text"
             placeholder=" Stay updated with us"
           />
         </div>
       </div>
       <footer id="contact">
-        <h1 class="text-center pb-3 font-bold text-[20px]">
+        <h1 class="text-center pb-3 font-bold text-[15px] md:text-[20px] lg:text-[20px]">
           &copy;2025 UnityIndo. All rights reserved.
         </h1>
       </footer>
